<package>
  <name>ros_example</name>
  <version>0.0.1</version>
  <description>A collection of basic and example ROS applications</description>
  <maintainer email="Thomasburns88@gmail.com">Thomas Burns</maintainer>
  <license>MIT</license>
  <author>Thomas Burns</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
